# micPy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  audio_recorder.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requiments.txt  requirements.txt  settings_gui.py
.github/workflows/: bandit.yml
client/: __init__.py  audio_buffer.py  audio_recorder.py  audio_recorder_client.py  cli.py  dbus_service.py  ipc_server.py  main.py  minimal_editor.py  requirements.txt  settings_gui.py  single_instance.py  text_inserter.py  voice_daemon.py
client/scripts/: mic_start.sh  mic_stop.sh  mic_toggle.sh  test_hotkeys.sh
common/: audio_utils.py  schemas.py
server/: Dockerfile  main.py  requirements.txt
