[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micpy"
version = "2.0.0"
description = "Speech-to-Text client for Parakeet API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Evgenii Istomin"}
]
keywords = ["speech-to-text", "stt", "whisper", "voice-recognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "pyperclip>=1.8.0",
    "pyaudio>=0.2.14",
    "prompt_toolkit>=3.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
micpy = "client.cli:main"

[project.urls]
Homepage = "https://github.com/Genajoin/micPy"
Repository = "https://github.com/Genajoin/micPy"

[tool.setuptools.packages.find]
where = ["."]
include = ["client*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
